2003-10-10  Robert Millan  <robertmh@gnu.org>

	* config.{guess,sub}: Update from official source (CVS).

2003-09-18  Robert Millan  <robertmh@gnu.org>

	* docs/texinfo.tex: Update from ftp.gnu.org.

2003-09-05  KB Sriram  <mail_kb@yahoo.com>

	* stage2/fsys_fat.c: Fix missdetection of ext2fs as fatfs.

2003-09-05  Robert Millan  <robertmh@gnu.org>

	* docs/menu.lst (GNU/Linux): Add commented initrd command, which is
	consistent with documentation.

2003-09-01  Robert Millan  <robertmh@gnu.org>

	* docs/menu.lst: Add NetBSD, OpenBSD, GNU/KFreeBSD and GNU/KNetBSD.

2003-08-13  Jason Thomas  <jason@intology.com.au>

	* util/grub-install.in (resolve_symlink): New function to resolve symlinks
	(find_device): moved symlink code to new function
	Before we convert the install_device we attempt to resolve it if its a
	symlink using the new function
	* util/mbchk.c (check_multiboot): The sense of an error message was
	inverted.
	Reported by Timothy Baldwin <T.E.Baldwin99@members.leeds.ac.uk>

2003-08-12  Jochen Hoenicke  <jochen@gnu.org>

	* stage2/fsys_reiserfs.c (read_tree_node): Fixed a typo; only
	matters for very large fs when tree doesn't fit in cache.
	(IH_KEY_OFFSET): Don't check for INFO->version.  There are
	actually old version file systems that use new version items.
	(IH_KEY_ISTYPE): Likewise.
	(reiserfs_dir): Likewise.

2003-08-09  Thierry Laronde  <tlaronde@polynum.org>

	* util/mkbimage: NEW File. `mkbimage' depends on GRUB and existed
	elsewhere. It is now part of GRUB so that people can fix/contribute.
	* util/Makefile.am: added script `mkbimage'

2003-08-01  Jason Thomas  <jason@intology.com.au>

	* util/grub-install.in: support --no-floppy
	This allow users to specify the --no-floppy option which
	is passed onto the grub shell, so it does not probe the floppy
	drive. 
	Patch from kesha@diedas.soften.ktu.lt

2003-06-17  Jochen Hoenicke  <jochen@gnu.org>

	* stage2/fsys_reiserfs.c (reiserfs_mount): Clear the node cache.